--- a/jelastic/jelastic.conf
+++ b/jelastic/jelastic.conf
@@ -3,5 +3,5 @@ Engine_Type=java
 Native_Requirements=
 App_User=jelastic
 Admin_App_User=cassandra
-Node_Type=cassandra
+Node_Type=cassandra2
 Web_Access=0
